--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="first-div">
-      <span class="welcome">Welcome to</span>
+      <span class="welcome">Welcome, this is</span>
       <h1 class="family-bakery">Family Bakery</h1>
       <p class="first-paragraph">
         We're the biggest, best equipped and most advanced Bakery in the greater
