This is my change.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- change in github -->
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
@@ -10,6 +11,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="first-div">
       <span class="welcome">Welcome, this is</span>
@@ -119,44 +121,47 @@
         <p><img src="icons-pic.png" alt="icons" /></p>
       </div>
       <div class="map-pic-div"><img src="screenshot.png" alt="map" /></div>
-    </div><div class="background">
-    <div class="main-sec6-div">
-      <div>
-        <span class="spans">About us</span>
-        <p>
-          I am text block. Click edit button to change this text. Lorem ipsum
-          dolor sit amet, consectetur. I am text block. Click edit button to
-          change this text. Lorem ipsum dolor sit amet, consectetur.
-        </p>
-        <p>
-          We are the champions! We are the most amazing theme of all time, yeah.
-        </p>
+    </div>
+    <div class="background">
+      <div class="main-sec6-div">
+        <div>
+          <span class="spans">About us</span>
+          <p>
+            I am text block. Click edit button to change this text. Lorem ipsum
+            dolor sit amet, consectetur. I am text block. Click edit button to
+            change this text. Lorem ipsum dolor sit amet, consectetur.
+          </p>
+          <p>
+            We are the champions! We are the most amazing theme of all time,
+            yeah.
+          </p>
+        </div>
+        <div>
+          <span class="spans">Why we are special?</span>
+          <p class="para">Our magical recipe.</p>
+          <p class="para">We care about environment.</p>
+          <p class="para">We are trusted by hundreds of clients.</p>
+          <p class="para">Social media loves us!</p>
+          <p class="para">This list is super easy to create.</p>
+        </div>
+        <div>
+          <span class="spans">Opening Hours</span>
+          <p class="para">Monday 10AM - 9PM</p>
+          <p class="para">Tuesday 10AM - 9PM</p>
+          <p class="para">Wednesday 10AM - 9PM</p>
+          <p class="para">Thursday 10AM - 10PM</p>
+          <p class="para">Friday 10AM - 10PM</p>
+          <p class="para">Weekends 10AM - 11PM</p>
+        </div>
+        <div>
+          <span class="spans">Contact Details</span>
+          <p>Manchester Road 123-78B, Silictown 7854MD, Great Country</p>
+          <p>+46 123 456 789</p>
+          <p>hello@sitename.com</p>
+          <p>http://www.sitename.com</p>
+        </div>
       </div>
-      <div>
-        <span class="spans">Why we are special?</span>
-        <p class="para">Our magical recipe.</p>
-        <p class="para">We care about environment.</p>
-        <p class="para">We are trusted by hundreds of clients.</p>
-        <p class="para">Social media loves us!</p>
-        <p class="para">This list is super easy to create.</p>
-      </div>
-      <div>
-        <span class="spans">Opening Hours</span>
-        <p class="para">Monday 10AM - 9PM</p>
-        <p class="para">Tuesday 10AM - 9PM</p>
-        <p class="para">Wednesday 10AM - 9PM</p>
-        <p class="para">Thursday 10AM - 10PM</p>
-        <p class="para">Friday 10AM - 10PM</p>
-        <p class="para">Weekends 10AM - 11PM</p>
-      </div>
-      <div>
-        <span class="spans">Contact Details</span>
-        <p>Manchester Road 123-78B, Silictown 7854MD, Great Country</p>
-        <p>+46 123 456 789</p>
-        <p>hello@sitename.com</p>
-        <p>http://www.sitename.com</p>
-      </div>
-    </div></div>
-    <div class="last"><img src="last sec.png"></div>
+    </div>
+    <div class="last"><img src="last sec.png" /></div>
   </body>
 </html>
