--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- change in github -->
+<!-- Git Bash -->
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
@@ -11,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-
+  <!-- Git Bash -->
   <body>
     <div class="first-div">
       <span class="welcome">Welcome, this is</span>
@@ -165,3 +166,4 @@
     <div class="last"><img src="last sec.png" /></div>
   </body>
 </html>
+<!-- Git Bash -->
